--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,10 @@
 [build]
   command = "npm install && npm run build"
   functions = "functions"
+
+[functions]
+  external_node_modules = ["express"]
+  node_bundler = "esbuild"
+
+[build.environment]
+  NODE_VERSION = "16"
