--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
 
 [functions]
   external_node_modules = ["express"]
-  node_bundler = "esbuild"
+#  node_bundler = "esbuild"
 
 [build.environment]
-  NODE_VERSION = "18"
+  NODE_VERSION = "16"
