--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   command = "npm install && npm run build"
-  functions = "functions"
+  functions = "build"
 
 [functions]
   external_node_modules = ["express"]
