--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,8 @@
 [build]
+  base = "/"
   command = "npm install && npm run build"
   functions = "build"
+  publish = "/build/"
 
 [functions]
   external_node_modules = ["express"]
