--- a/package.json
+++ b/package.json
@@ -2,31 +2,17 @@
   "name": "netlify-express",
   "version": "0.0.1",
   "description": "Example of how to deploy a Express.js Netlify app.",
-  "main": "functions/server.js",
+  "main": "build/server.js",
   "scripts": {
     "build": "rimraf build && netlify-lambda build src && cp ./public/* ./build/",
-    "start": "nodemon server-local.js"
+    "start": "ts-node-dev ts-node-dev -r tsconfig-paths/register --respawn ./src/server-local.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/neverendingqs/netlify-express.git"
-  },
-  "keywords": [
-    "netlify",
-    "express.js"
-  ],
-  "author": "neverendingqs",
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/neverendingqs/netlify-express/issues"
-  },
-  "homepage": "https://github.com/neverendingqs/netlify-express#readme",
   "devDependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "netlify-lambda": "^1.6.3",
-    "nodemon": "^1.19.2",
     "rimraf": "^5.0.5",
-    "serverless-http": "^2.3.0"
+    "serverless-http": "^2.3.0",
+    "ts-node-dev": "^2.0.0"
   }
 }
