--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "netlify-lambda": "^1.6.3",
+    "prettier": "^3.1.1",
     "rimraf": "^5.0.5",
     "serverless-http": "^2.3.0",
     "ts-node-dev": "^2.0.0"
